# universalizer

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: qc.yml
tests/: __init__.py  test_norm.py
tests/resources/: test_nodes.tsv
tests/resources/graph_chebi/: chebi_edges.tsv  chebi_nodes.tsv
tests/resources/graph_for_cats/: cats_edges.tsv  cats_nodes.tsv
tests/resources/graph_for_ids/: genes_edges.tsv  genes_nodes.tsv
tests/resources/graph_simple_test/: test_edges.tsv  test_nodes.tsv  unexpected_ids.tsv
tests/resources/mappings/: ogg-gene-test-0.1.sssom.tsv  skos-biolink_cats-all-1.0.sssom.tsv
universalizer/: __init__.py  categories.py  cli.py  norm.py  oak_utils.py
