[tool.poetry]
name = "universalizer"
version = "0.0.1"
description = "Provides functions for knowledge graph cleanup and identifier normalization."
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
kgx = "^1.7.0"
prefixmaps = "^0.1.3"
click = "^8.1.3"
curies = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
universalizer = "universalizer.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
